--- a/style.css
+++ b/style.css
@@ -733,4 +733,30 @@ html {
     border-bottom: 1px solid var(--skin-color);
 }
 
+ .card {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}  
+
+
+.but-ton {
+  background: #000;
+  color: #969c9c;
+  padding: 10px 22px;
+  border: none;
+  border-radius: 10px;
+  transition: all 0.4s ease;
+}
+
+.but-ton:hover {
+  box-shadow: 0 0 15px #7d8584, 0 0 30px #666b6b;
+  transform: scale(1.05);
+}
+
+
+ 
 
